fix swagger route
